# chunk-optimizer

./: .gitignore  AGENT.md  PERFORMANCE_OPTIMIZATION.md  README.md  docker-compose.yml  test_domain_config.py  test_performance.py
chunk-optimizer-client/: pyproject.toml
chunk-optimizer-client/src/chunk_optimizer/: __init__.py  client.py  exceptions.py  models.py
chunk-optimizer-js-client/: package.json
chunk-optimizer-js-client/src/: client.ts  exceptions.ts  index.ts  models.ts
chunk-optimizer-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
chunk-optimizer-service/src/: __init__.py
chunk-optimizer-service/src/algorithms/: __init__.py  quality_analyzer.py  redundancy_detector.py  similarity_calculator.py  size_analyzer.py
chunk-optimizer-service/src/api/rest/: main.py
chunk-optimizer-service/src/api/rest/schemas/: __init__.py
chunk-optimizer-service/src/config/: domain_config.py  settings.py
chunk-optimizer-service/src/core/: optimizer.py
examples/: domain_usage_example.py
spec/: 001-core-system.md  002-algorithms.md  003-api-layer.md  004-client-sdks.md  005-development-guide.md  README.md  domain-configuration.md  system.spec.md
spec/layers/: algorithms.spec.md  api.spec.md  client.spec.md  core.spec.md
