[tool.poetry]
name = "chunk-optimizer-client"
version = "0.1.0"
description = "Python client SDK for Chunk Optimizer Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "chunk_optimizer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.8"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
